Corrected Carousel display // Added required field indicator on signIn forms // SearchForm : aligned checkbox display on the left

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1906,8 +1906,16 @@
 		background-color: #536140;
 	}
 	
+	/* Required fields indicator */
+	label:has(+ input:required):after {
+  content: ' *';
+  color: red;
+	}
 	
-
+	label:has(+ textarea:required):after {
+  content: ' *';
+  color: red;
+	}
 
 }
 
